# MusicStudio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  README.md  autorebuild  bootstrap  bs.h  build.def  meson.build  meson_options.txt
.github/workflows/: build_all.yml
BuildTools/: bundle-fs.cpp  make-bundle.cpp  make-resource-header.cpp  make-resource-source.cpp  make-resource.cpp  meson.build
CoreLibraries/: meson.build  module.modulemap
CoreLibraries/Bundle/: Bundle.cpp  Bundle.h  Forward.h  Resource.h  meson.build
CoreLibraries/CLI/: ArgumentParser.cpp  ArgumentParserError.h  meson.build
CoreLibraries/Core/: Bench.h  File.cpp  File.h  Forward.h  Library.h  MappedFile.cpp  Print.h  System.cpp  System.h  meson.build
CoreLibraries/FS/: Bundle.cpp  Bundle.h  Forward.h  Resource.cpp  Resource.h  meson.build
CoreLibraries/Main/: Main.cpp  meson.build
CoreLibraries/Ty/: Assert.h  ByteBuffer.h  Bytes.cpp  Bytes.h  Defer.h  Error.cpp  ErrorOr.h  FormatCounter.h  Formatter.h  Forward.h  Hash.h  Json.cpp  Json.h  LinearMap.h  Optional.h  Parse.cpp  RefPtr.h  Resource.cpp  Resource.h  SmallVector.h  StringBuffer.cpp  StringBuffer.h  StringView.h  System.cpp  System.h  Type.h  Vector.h  meson.build
Dependencies/: meson.build
Fonts/: Fonts.cpp  Fonts.h  IosevkaRegular.h  OxaniumLight.h  VictorMonoRegular.h  build.def  meson.build
Fonts/OxaniumLight/: meson.build
Libraries/: build.def  meson.build  module.modulemap
Libraries/AU/: Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  AudioManager.cpp  AudioManager.h  Forward.h  Pipeline.cpp  Pipeline.h  SoundIo.cpp  SoundIo.h  Transcoder.cpp  Transcoder.h  WAV.cpp  WAV.h  build.def
Libraries/Async/: Async.cpp  Async.h  Context.asm  Context.h  Stack.asm  Stack.h  build.def
Libraries/Basic/: Allocator.cpp  Allocator.h  Arena.cpp  Arena.h  Array.h  Base.h  BitSet.h  Bits.h  ByteDecoder.cpp  ByteDecoder.h  Bytes.cpp  Bytes.h  Context.cpp  Context.h  DeferredFileLogger.cpp  DeferredFileLogger.h  DispatchQueue.cpp  Error.c  Error.h  FileLogger.cpp  FixedArena.cpp  FixedArena.h  Format.cpp  Format.h  Forward.h  Function.h  Hash.h  Json.h  Logger.cpp  Logger.h  Magic.h  Mailbox.cpp  Mailbox.h  Maybe.h  MemoryPoker.cpp  MemoryPoker.h  MemoryPressureMonitor.cpp  PageAllocator.cpp  PageAllocator.h  Platform.h  (+24 more)
Libraries/CLI/: ArgumentParser.cpp  ArgumentParser.h  ArgumentParserError.cpp  ArgumentParserError.h  build.def  meson.build
Libraries/Clay/: Clay.c  LICENSE  build.def
Libraries/Core/: File.cpp  File.h  Library.cpp  Library.h  MappedFile.cpp  MappedFile.h  Print.h  System.cpp  System.h  Time.cpp  Time.h  build.def  meson.build
Libraries/Debug/: Instrumentation.cpp  Instrumentation.h  build.def  meson.build
Libraries/FS/: Bundle.cpp  Bundle.h  FSVolume.cpp  FSVolume.h  Forward.h  OS.cpp  OS.h  Resource.h  build.def
Libraries/GL/: GL.h  Renderer.cpp  Renderer.h  build.def
Libraries/GUI/: Theme.h  Window.cpp  Window.h  meson.build
Libraries/Image/: Image.cpp  Image.h  build.def
Libraries/Layout/: Layout.c  Layout.h  Sugar.h  build.def
Libraries/LibAudio/: AudioDecoder.cpp  AudioDecoder.h  AudioManager.cpp  AudioManager.h  Forward.h  Pipeline.cpp  Pipeline.h  (+6 more)
Libraries/Rexim/: Arena.cpp  Arena.h  File.cpp  File.h  LA.cpp  LA.h  StringBuilder.h  StringView.cpp  StringView.h  Util.cpp  Util.h  build.def  meson.build  minirent.cpp  minirent.h
Libraries/SoundIo/: SoundIo.c  build.def  meson.build  soundio.h  soundio_internal.h
Libraries/UI/: Application.h  Forward.h  FreeGlyph.cpp  FreeGlyph.h  KeyCode.h  SimpleRenderer.cpp  SimpleRenderer.h  UI.cpp  UI.h  Window.h  build.def  meson.build
Libraries/UI/AppKit/: Application.mm  Window.mm
Libraries/UI/Graphics/: GL.h
Libraries/UI/Shaders/: Shaders.cpp  Shaders.h  meson.build  simple_epic.frag
Libraries/UI/dummy/: Application.cpp  Window.cpp
Libraries/UI/macos/: Application.mm  UIApp.h  UIApp.mm  Window.mm
Libraries/Vst/: AEffect.h  AudioPlugin.cpp  AudioPlugin.h  CanDo.h  ChunkType.h  Config.h  Host.h  KnobMode.h  Opcodes.h  PluginData.h  Precision.h  Rectangle.h  Vst.cpp  Vst.h  VstHost.cpp  build.def  meson.build
MusicStudio/: Application.cpp  Application.h  Browser.cpp  Color.h  Context.cpp  Context.h  EventLoop.h  FileBrowser.cpp  FileBrowser.h  Forward.h  NamedArguments.cpp  PianoRoll.cpp  PinBoard.cpp  PluginEvent.h  State.cpp  State.h  StatusBar.cpp  Style.cpp  Style.h  Toolbar.cpp  Toolbar.h  UI.cpp  UI.h  WidgetView.h  build.def  main.cpp  meson.build
MusicStudio/Tools/: meson.build  vst-dump.cpp
Piano/: Color.h  Layout.h  Playlist.h  UI.cpp  build.def  main.cpp
Plugins/: build.def  hello.c  meson.build
Plugins/AudioPlugin/: AudioPlugin.cpp  AudioPlugin.h  AudioPlugin.mm  main.cpp  meson.build
Plugins/AudioPlugin/Meta/: make-linux.sh  make-windows.sh
Plugins/BareMinimum/: BareMinimum.h  main.cpp  make.sh  meson.build
Plugins/BareMinimum/Meta/: make-linux.sh  make-windows.sh
Shaders/: Shaders.cpp  Shaders.h  build.def  color.frag  simple.vert  simple_color.frag  simple_image.frag  simple_text.frag
Toolchain/: .gitignore  bootstrap.sh  build-ccache.sh  build-cmake.sh  build-lldbui.sh  build-llvm.sh  build-ninja.sh  build-odin.sh  build-python.sh  env
Tools/: binary_to_compressed_c.cpp  build.def  list-devices.c  list-devices.cpp  make-project.cpp  meson.build  ms-tar-ls.cpp  ms-tar.cpp  pipe-audio.cpp  play-audio.cpp  play-managed-audio.cpp  play-pipe.cpp  plugin-dump.cpp  read-project.cpp  run-wasm-plugin.cpp  send-file.cpp  shadertoy.cpp  sine.c  sine.cpp  vst-dump.cpp  vst-run-gui.cpp  vst-run-gui.mm  watchf.cpp
Toys/: async.c  build.def  fs-volume-file-watch-example.cpp  hotreload-test-lib.cpp  hotreload-test.cpp  play-audio.cpp  sine.cpp  swap-stack.c
src/: Application.cpp  Application.h  Common.h  FileBrowser.cpp  FileBrowser.h  Forward.h  FreeGlyph.cpp  FreeGlyph.h  Host.cpp  Host.h  Imgui.cpp  Imgui.h  MainWindow.cpp  MainWindow.h  PathEvent.h  Plugin.cpp  Plugin.h  SimpleRenderer.cpp  SimpleRenderer.h  StatusBar.h  Style.h  Toolbar.cpp  Toolbar.h  Widget.h  main.cpp  meson.build
(+408 files in other folders)
