executable('music-studio', [
    'FileBrowser.cpp',
    'StatusBar.cpp',
    'Style.cpp',
    'Toolbar.cpp',
    'main.cpp',
  ], dependencies: [
    cli_dep,
    freetype2_dep,
    ty_dep,
    main_dep,
    rexim_dep,
    ui_dep,
    vst_dep,
    ms_dep,
    fs_dep,
    fs_bundle_dep,
    zip_dep
  ])
