executable('vst-dump', 'vst-dump.cpp', dependencies: [
    ms_dep,
    cli_dep,
    main_dep,
  ])

executable('sine', 'sine.cpp', dependencies: [
    main_dep,
    soundio_dep,
    ty_dep,
    cli_dep,
  ])

executable('list-devices', 'list-devices.cpp', dependencies: [
    main_dep,
    soundio_dep,
    ty_dep,
    cli_dep,
  ])

executable('vst-run-gui', 'vst-run-gui.cpp', dependencies: [
    ms_dep,
    cli_dep,
    main_dep,
    ui_dep,
    fs_dep,
    fs_bundle_dep
  ])
